Untitled Folder/admin1/workspace/New Project/src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Dimapur</fullName>
                </value>
                <value>
                    <fullName>Faridabad</fullName>
                </value>
                <value>
                    <fullName>Gandhinagar</fullName>
                </value>
                <value>
                    <fullName>Kochi</fullName>
                </value>
                <value>
                    <fullName>Kohima</fullName>
                </value>
                <value>
                    <fullName>Thiruvananthapuram</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Account_lookup_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gujarat</fullName>
                </value>
                <value>
                    <fullName>Haryana</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Nagaland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Please Type Your Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>